<resources>
    <string name="app_name">Telegram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Roman Giniyatov</string>
    <string name="settings_defauld_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79124588169</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">Gentylove</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_defaukd_bio">О себе</string>
    <string name="settings_label_bio">Напишите о себе</string>
    <string name="settinhs_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_title_your_phone">\Ваш телефон \</string>
    <string name="register_toast_enter_phone">\Введите номер телефона \</string>
    <string name="hint_in_fr_enter_phone_number">-- -- -- -- -- --</string>
    <string name="hint_in_fr_enter_code">_ _ _ _ _ _</string>
</resources>
